<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="top|center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_2"
        android:textColor="#00FF00"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_marginBottom="230dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/sfx"
        android:textColor="#00FF00"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/voiceModeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="24dp">

        <RadioButton
            android:id="@+id/voiceOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ring"
            android:textColor="#00FF00"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/voiceOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silent"
            android:textColor="#00FF00"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/volumeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:textColor="#00FF00"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/volumeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/returnButton1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FF00"
        android:text="@string/returnToMenu1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>
