<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootContainer"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#000000">

    <TextView
        android:id="@+id/counterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter"
        android:textColor="#00FF00"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_marginBottom="160dp"/>

    <TextView
        android:id="@+id/pushupCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#00FF00"
        android:textSize="120sp"
        android:textStyle="bold"
        android:layout_marginBottom="64dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_count"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <ImageButton
        android:id="@+id/startButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:backgroundTint="#00FF00"
        android:src="@drawable/outline_arrow_right_24"
        android:scaleType="fitXY"
        android:padding="0dp" />

    <View
        android:id="@+id/menuSpacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/menuButtonStart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FF00"
        android:text="@string/return_to_menu1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <View
        android:id="@+id/stopSpacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"/>

    <Button
        android:id="@+id/stopButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:text="@string/stop"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/resultContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#00FF00"
            android:textSize="36sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/restartText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:textColor="#00FF00"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <ImageButton
            android:id="@+id/restartButton"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:backgroundTint="#00FF00"
            android:src="@drawable/restart"
            android:scaleType="fitXY"
            android:padding="0dp"/>

        <Button
            android:id="@+id/menuButtonResult"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#00FF00"
            android:text="@string/return_to_menu1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/animeOverlay"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:contentDescription="Anime reward"
        android:src="@drawable/ic_launcher_background" />
</FrameLayout>
